--- a/style.css
+++ b/style.css
@@ -1,28 +1,65 @@
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
 body {
-    width: 100%;
-    height: 100vh;
+  width: 100vw;
+  height: 100vh;
 }
 
 header {
-    display: flex;
-    flex-wrap: nowrap;
-    background-color: rgb(133, 212, 212);
-    justify-content: space-around;
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  width: 100%;
+  height: 10%;
+  background-color: #eee;
 }
 
 header .youtube-logo {
-    display: flex; 
-    justify-content: center;
-    align-items: center;
-    gap: 1.5em;
+  display: flex;
+  align-items: center;
+  gap: 1.5em;
+  padding-left: 20px;
+  color: #f8f8f8;
 }
 
 .svg-icon {
-    min-width: 12vw;
+  width: 7vw;
+}
+
+header .searchbar {
+  display: flex;
+  align-items: center;
+}
+
+input {
+  width: 47em;
+  padding: 0.8em;
+  border: 1px solid #dfe1e5;
+}
+.search-icon {
+  border: 1px solid #dfe1e5;
+  padding: 0.4em;
+  margin-right: 0.9em;
+}
+
+header .icons-right {
+  width: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.icons-right img {
+  padding: 0 1em;
+  color: #5f6368;
 }
 
 #profilepic {
-    width: 5%;
-    border: 1px solid rgb(235, 225, 225);
-    border-radius: 50%;
+  width: 25%;
+  height: auto;
+  /* border: 1px solid rgb(235, 225, 225); */
+  border-radius: 50%;
 }
