--- a/style.css
+++ b/style.css
@@ -3,10 +3,17 @@
   padding: 0;
   margin: 0;
 }
+html {
+  font-size: 10px;
+  font-family: Roboto, Arial, sans-serif;
+}
 body {
   width: 100vw;
   height: 100vh;
+  background-color: #eee;
 }
+
+/* HEADER CSS */
 
 header {
   display: flex;
@@ -14,7 +21,7 @@ header {
   justify-content: space-between;
   width: 100%;
   height: 10%;
-  background-color: #eee;
+  background-color: rgb(250, 250, 250);
 }
 
 header .youtube-logo {
@@ -60,6 +67,58 @@ header .icons-right {
 #profilepic {
   width: 25%;
   height: auto;
-  /* border: 1px solid rgb(235, 225, 225); */
   border-radius: 50%;
+}
+
+/* HEADER CSS - END */
+
+/* MAIN CSS */
+
+.main-container {
+  background-color: #eee;
+  min-height: 100vh;
+  display: flex;
+  justify-content: space-around;
+  margin-top: 1em;
+}
+
+.actual-video {
+  display: flex;
+}
+
+aside {
+  width: 38%;
+  border: 1px solid #000;
+}
+
+.title-container {
+    display: flex;
+    flex-direction: column;
+    gap: .3em;
+    margin-top: 1.4em;
+}
+
+.title-container .actual-title {
+    font-weight: 400;
+    font-size: 2em;
+}
+
+.title-container .title-details {
+    font-weight: 500;
+    color: rgb(68, 108, 238);
+    text-transform: uppercase;
+    opacity: .9;
+    padding: .2em;
+    width: 9em;
+    display: flex;
+    justify-content: center;
+    gap: .6em;
+    align-items: center;
+    font-size: 1.2rem;
+}
+
+.location-icon {
+    background-color: rgb(68, 108, 238);
+  -webkit-mask: url('assets/location_on_white_24dp.svg') no-repeat center;
+  mask: url('assets/location_on_white_24dp.svg') no-repeat center;
 }
